macros/tests/ui/play.rs
use gprogram_framework_macros::command_handlers;

command_handlers!();

fn main() {}
